add benchmark types